@@ -1,7 +1,10 @@
 <configure
   xmlns="http://namespaces.zope.org/zope"
   xmlns:browser="http://namespaces.zope.org/browser"
-  i18n_domain="zeit.cms">
+  xmlns:i18n="http://namespaces.zope.org/i18n"
+  i18n_domain="zeit.seo">
+
+  <i18n:registerTranslations directory="locales" />
 
   <adapter factory=".seo.SEO" />
   <adapter factory=".seo.seo_dav_properties" />
